# data-sources

./: .env.sample  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  FILE_TREE.md  PROJECT_PLAN.md  README.md  SCAFFOLDING_PROMPT.md  docker-compose.monitoring.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dependency-review.yml  lint-schemas.yml  performance.yml  publish-docs.yml  release.yml  security.yml  update-sources.yml
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-resume-session-1755149814421-pcj1wp7t9-1755149846637.txt  session-1755149814421-pcj1wp7t9-auto-pause.json
.hypothesis/constants/: 4da29ef78afb376a  639ba3f7a65fd8d7  78f0b5a11b1d2dd3  933c07be7b2a2f48
.swarm/: memory.db-shm  memory.db-wal
API_KEYS/: index.html
SECRETS_MANAGEMENT/: index.html
SOURCES/: index.html
api/python-tools/: index.html
api/quality-schema/: index.html
api/source-schema/: index.html
api/tools-reference/: index.html
config/: categories.json  scoring-config.json
data/: quality_history.json
data-sources/threat-intelligence/defensive/: mitre-defend.json
data-sources/threat-intelligence/iocs/: alienvault-otx.json
data-sources/threat-intelligence/ttps/: mitre-attack.json
data-sources/vulnerability/: cert-vn.json  cisa-kev.json  exploit-db.json  mitre-cve.json  otx.json  sans-isc.json  vuldb.json  zdi.json
data-sources/vulnerability/advisory/: cert-vn.json  cisa-kev.json  sans-isc.json  zdi.json
data-sources/vulnerability/cve/: mitre-cve.json  nvd.json  vendor-advisory.json  vuldb.json
data-sources/vulnerability/exploit/: exploit-db.json
data-sources/vulnerability/exploited/: cisa-kev.json
data-sources/vulnerability/official/: nvd.json
data-sources/vulnerability/scoring/: epss.json
data-sources/vulnerability/threat-intelligence/: otx.json  threat-blogs-analyst.json  threat-blogs-community.json  threat-blogs-government.json  threat-blogs-media.json  threat-blogs-vendor.json
development/api-keys/: index.html
development/architecture/: index.html
development/contributing/: index.html
development/secrets-management/: index.html
docs/: SECRETS_MANAGEMENT.md  SOURCES.md  github-pages-setup.md  index.md
docs/api/: python-tools.md  quality-schema.md  source-schema.md  tools-reference.md
docs/development/: api-keys.md  architecture.md  contributing.md  secrets-management.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/usage/: data-sources.md  querying.md  scoring.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
github-pages-setup/: index.html
k8s/: configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml
monitoring/grafana/dashboards/: threatintel-dashboard.json
monitoring/prometheus/: alerts.yml  prometheus.yml
schemas/: quality.schema.json  source.schema.json
search/: search_index.json
sources/bug-bounty-platforms/bugcrowd/: bugcrowd-free-resources.json
sources/bug-bounty-platforms/hackerone/: hackerone-free-resources.json
sources/bug-bounty-platforms/openbugbounty/: open-bug-bounty.json
sources/cloud-security/aws/: aws-security-bulletins.json
sources/cloud-security/azure/: msrc-security-updates.json
sources/cloud-security/gcp/: gcp-security-bulletins.json
sources/cloud-security/multi-cloud/: csa-research.json
sources/community/qa/: stackexchange-security.json
sources/compliance-resources/cis/: cis-controls.json
sources/compliance-resources/nist/: nist-cybersecurity-framework.json
sources/container-security/docker/: docker-security.json
sources/container-security/falco/: falco-rules.json
sources/container-security/kubernetes/: kubernetes-cve-feed.json
sources/devsecops/gitlab/: gitlab-security.json
sources/devsecops/scanning/: npm-security-advisories.json  owasp-dependency-check.json  snyk-vulnerability-database.json
sources/education-training/cybrary/: cybrary-free-courses.json
sources/education-training/owasp/: owasp-webgoat.json
sources/education-training/portswigger/: portswigger-academy.json
sources/education-training/professor-messer/: professor-messer-comptia.json
sources/education-training/sans/: sans-cyber-aces.json
sources/forensics/autopsy/: autopsy-forensics.json
sources/government/: uk-ncsc.json
sources/incident-response/cisa/: cisa-alerts.json
templates/: source-metadata-template.json
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  test_performance.py
tests/fixtures/: sample_source.json
tests/integration/: __init__.py  test_end_to_end.py  test_pipeline_integration.py
tests/performance/: test_pipeline_performance.py
tests/unit/: __init__.py  test_deduplication.py  test_fetch_sources.py  test_nvd_fetcher.py  test_phase1_sources.py  test_quality_analyzer.py  test_score_sources.py  test_validate_sources.py
tools/: api_server.py  deduplication.py  fetch_sources.py  index_sources.py  metrics.py  migrate_source_schema.py  pipeline.py  quality_analyzer.py  requirements.txt  score_sources.py  serve_docs.py  validate_api_keys.py  validate_sources.py
tools/sources/: abuse_ch_fetcher.py  nvd_fetcher.py  otx_fetcher.py
usage/data-sources/: index.html
usage/querying/: index.html
usage/scoring/: index.html
(+66 files in other folders)
